Fix error that cause elements to not move when scrollbar appears

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,7 +5,6 @@ html {
 body {
   background-color: #eee;
   min-height: 100vh;
-  min-width: 100vw;
 }
 
 [x-cloak] {
@@ -20,7 +19,7 @@ body {
 
 /* BULMA */
 .navbar-brand {
-  height: 2.5rem;
+  font-size: 1.5rem;
 }
 
 
@@ -33,19 +32,19 @@ body {
 }
 
 /* navbar */
-.navbar-main-background {
+.navbar-background-gradient-placeholder {
   height: 4rem;
   background: linear-gradient(to bottom, #ddd 75%, #eee);
 }
 
-.navbar-menu-main.is-active {
+.navbar-menu-main.is-hidden-touch {
+  padding-top: 0;
+}
+
+.navbar-menu-main.is-hidden-desktop {
   position: absolute;
   width: 100vw;
   min-height: 3.5rem;
-}
-
-.navbar-menu.is-hidden-desktop {
-  font-size: 1.25rem;
 }
 
 .navbar-title-container {
